All UI functionalities verified

--- a/src/app/components/companyaddress/companyaddress.component.html
+++ b/src/app/components/companyaddress/companyaddress.component.html
@@ -21,7 +21,7 @@
                         FlotNo :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" name="txtcode" class="form-control" id="txtcode" [(ngModel)]="companyaddress.FlotNo" placeholder="QualificationtypeId" />
+                        <input type="text" name="txtcode" class="form-control" id="txtcode1" [(ngModel)]="companyaddress.FlotNo" placeholder="FlotNo" />
                     </div>
 
                     <br><br>
@@ -29,22 +29,22 @@
                         Address1 :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="companyaddress.Address1" placeholder="MediumId" />
+                        <input type="text" name="txtcode" id="txtcode2" class="form-control"
+                            [(ngModel)]="companyaddress.Address1" placeholder="Address1" />
                     </div>
                     <div class="col-md-3">
                         Address2 :
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="companyaddress.Address2" placeholder="InstitutionName">
+                            [(ngModel)]="companyaddress.Address2" placeholder="Address2">
                     </div>
                     <br><br>
                     <div class="col-md-3">
                         City :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" class="form-control" id="txtcode" [(ngModel)]="companyaddress.City" placeholder="QualificationtypeId" />
+                        <input type="text" name="txtcode" class="form-control" id="txtcode" [(ngModel)]="companyaddress.City" placeholder="City" />
                     </div>
 
                     <br><br>
