--- a/src/app/components/companyreviews/companyreviews.component.html
+++ b/src/app/components/companyreviews/companyreviews.component.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="companyreviews.ReviewId" class="form-control"> 
-                            <option  *ngFor="let item of reviewsData" value="{{item.Id}}">{{item.Heading_}}</option>
+                            <option  *ngFor="let item of reviewsData" value="{{item.Id}}">{{item.Heading}}</option>
                         </select>
                         <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
                             [(ngModel)]="companyreviews.ReviewId" placeholder="ReviewId" /> -->
