--- a/src/app/components/employmenttypes/employmenttypes.component.html
+++ b/src/app/components/employmenttypes/employmenttypes.component.html
@@ -29,7 +29,7 @@
                         IsActive :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                        <input type="checkbox" name="txtcode" id="txtcode" class="form-check-input"
                             [(ngModel)]="employmenttypes.IsActive" placeholder="IsActive" />
                     </div>
                 </div>
