--- a/src/app/components/menu_list/menu_list.component.html
+++ b/src/app/components/menu_list/menu_list.component.html
@@ -7,30 +7,37 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        M_P_ID :
+                        MPId :
                     </div>
                     <div class="col-md-3">
                         <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="menu_list.M_P_ID" placeholder="M_P_ID">
+                            [(ngModel)]="menu_list.MPId" placeholder="MPId">
                     </div>
                     <div class="col-md-3">
-                        M_NAME :
+                        MName :
                     </div>
                     <div class="col-md-3">
                         <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
                             <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
                         </select> -->
-                        <input type="text" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="menu_list.M_NAME" placeholder="M_NAME" />
+                        <input type="text" name="txtcode3" class="form-control" id="txtcode3"
+                            [(ngModel)]="menu_list.MName" placeholder="MName" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        CONTROLLER_NAME :
+                        ControllerName :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="menu_list.CONTROLLER_NAME" placeholder="CONTROLLER_NAME" />
+                        <input type="text" name="txtcode2" id="txtcode2" class="form-control"
+                            [(ngModel)]="menu_list.ControllerName" placeholder="ControllerName" />
+                    </div>
+                    <div class="col-md-3">
+                        ActionName:
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" name="txtcode1" id="txtcode1" class="form-control"
+                            [(ngModel)]="menu_list.ActionName" placeholder="ActionName" />
                     </div>
                 </div>
 
@@ -56,10 +63,10 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>M_P_ID</th>
-                                        <th>M_NAME</th>
-                                        <th>CONTROLLER_NAME</th>
-                                        <th>ACTION_NAME</th>
+                                        <th>MPId</th>
+                                        <th>MName</th>
+                                        <th>ControllerName</th>
+                                        <th>ActionName</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -72,13 +79,13 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.M_P_ID}}</td>
-                                        <td>{{item.M_NAME}}</td>
-                                        <td>{{item.CONTROLLER_NAME}}</td>
-                                        <td>{{item.ACTION_NAME}}</td>
-                                        <td><button class="btn btn-info" (click)="GetMenu_ListById(item.M_ID)"> Edit
+                                        <td>{{item.MPId}}</td>
+                                        <td>{{item.MName}}</td>
+                                        <td>{{item.ControllerName}}</td>
+                                        <td>{{item.ActionName}}</td>
+                                        <td><button class="btn btn-info" (click)="GetMenu_ListById(item.MId)"> Edit
                                             </button></td>
-                                        <td><button class="btn btn-danger" (click)="DeleteMenu_List(item.M_ID)"> Delete
+                                        <td><button class="btn btn-danger" (click)="DeleteMenu_List(item.MId)"> Delete
                                             </button></td>
                                     </tr>
                                 </tbody>
