--- a/src/app/components/templatetype/templatetype.component.html
+++ b/src/app/components/templatetype/templatetype.component.html
@@ -7,18 +7,18 @@
             <div class='card-body'>
   
                 <div class="row" style="padding-bottom: 10px;">
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                        <b>Templateid :</b> 
                     </div>
                     <div class="col-md-3">
 
                        <select id="Id" name="Name" [(ngModel)]="templatetype.Id" class="form-control">
                             <option *ngFor="let item of templateData" value="{{item.Id}}" > {{item.Name}} </option>
-                        </select>
+                        </select> 
 
 
-                      <!-- <input type="number" id="txtskill" Name="txtskill"  class="form-control" [(ngModel)]="templatetype.Templateid" placeholder="Templateid"> -->
-                    </div>
+                      <input type="number" id="txtskill" Name="txtskill"  class="form-control" [(ngModel)]="templatetype.Templateid" placeholder="Templateid"> 
+                    </div>-->
                     <div class="col-md-3">
                        <b>Name :</b> 
                     </div>
