--- a/src/app/components/companyemails/companyemails.component.html
+++ b/src/app/components/companyemails/companyemails.component.html
@@ -29,7 +29,7 @@
                         IsPrimary :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                        <input type="checkbox" name="txtcode" id="txtcode" class="form-check-input"
                             [(ngModel)]="companyemails.IsPrimary" placeholder="IsPrimary" />
                     </div>
                     <div class="col-md-3">
