--- a/src/app/components/status/status.component.html
+++ b/src/app/components/status/status.component.html
@@ -17,7 +17,7 @@
                         Code :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
+                        <input type="text" name="txtcode" class="form-control" id="txtcode"
                             [(ngModel)]="status.Code" placeholder="Code" />
                     </div>
 
