--- a/src/app/components/taskcommentdocuments/taskcommentdocuments.component.html
+++ b/src/app/components/taskcommentdocuments/taskcommentdocuments.component.html
@@ -6,22 +6,24 @@
             </div>
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         Id :
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
                             [(ngModel)]="taskcommentdocuments.Id" placeholder="Id">
+                    </div>-->
+                    <div class="col-md-3">
+                        TaskComment:
                     </div>
                     <div class="col-md-3">
-                        TaskCommentId :
-                    </div>
-                    <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="taskcommentdocuments.TaskCommentId" placeholder="TaskCommentId" />
+                        <select id="DDLTaskCommentId" name="DDLTaskCommentId" class="form-control"
+                            [(ngModel)]="taskcommentdocuments.TaskCommentId">
+                            <option *ngFor="let item of taskCommentsData" value="{{item.Id}}"> {{item.Comments}}
+                            </option>
+                        </select>
+                        <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="taskcommentdocuments.TaskCommentId" placeholder="TaskCommentId" /> -->
                     </div>
 
                     <br><br>
@@ -58,21 +60,21 @@
                             [(ngModel)]="taskcommentdocuments.Description" placeholder="Description" />
                     </div>
 
-
-                   
                 </div>
 
                 <div class="row " style="padding-bottom: 10px;">
                     <div class="col-md-9"></div>
                     <div class="col-md-1">
-                        <button (click)="AddTaskCommentDocuments()" class="btn btn-primary" *ngIf="isSave">Submit</button>
+                        <button (click)="AddTaskCommentDocuments()" class="btn btn-primary"
+                            *ngIf="isSave">Submit</button>
                     </div>
                 </div>
 
                 <div class="row " style="padding-bottom: 10px;">
                     <div class="col-md-9"></div>
                     <div class="col-md-3">
-                        <button (click)="UpdateTaskCommentDocuments()" class="btn btn-primary" *ngIf="isUpdate">Update</button>
+                        <button (click)="UpdateTaskCommentDocuments()" class="btn btn-primary"
+                            *ngIf="isUpdate">Update</button>
                     </div>
                 </div>
 
@@ -110,9 +112,11 @@
                                         <td>{{item.File}}</td>
                                         <td>{{item.Description}}</td>
 
-                                        <td><button class="btn btn-info" (click)="GetTaskCommentDocumentsById(item.Id)"> Edit
+                                        <td><button class="btn btn-info" (click)="GetTaskCommentDocumentsById(item.Id)">
+                                                Edit
                                             </button></td>
-                                        <td><button class="btn btn-danger" (click)="DeleteTaskCommentDocuments(item.Id)"> Delete
+                                        <td><button class="btn btn-danger"
+                                                (click)="DeleteTaskCommentDocuments(item.Id)"> Delete
                                             </button></td>
                                     </tr>
                                 </tbody>
