--- a/src/app/components/taskdocuments/taskdocuments.component.html
+++ b/src/app/components/taskdocuments/taskdocuments.component.html
@@ -6,20 +6,23 @@
             </div>
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         Id :
                     </div>
                     <div class="col-md-3">
                         <input type="number" id="txtskill" class="form-control" Name="txtskill"
                             [(ngModel)]="taskdocuments.Id" placeholder="Id">
-                    </div>
+                    </div> -->
                     <div class="col-md-3">
                         TaskId :
                     </div>
                     <div class="col-md-3">
-                      
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="taskdocuments.TaskId" placeholder="TaskId" />
+                        <select  id="DDLTaskId" name="DDLTaskId" class="form-control"  [(ngModel)]="taskdocuments.TaskId" >
+                            <option *ngFor="let item of taskData" value="{{item.Id}}" > {{item.Name}} </option>
+                        </select>
+
+                        <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="taskdocuments.TaskId" placeholder="TaskId" /> -->
                     </div>
 
                     <br><br>
