--- a/src/app/components/tasklog/tasklog.component.html
+++ b/src/app/components/tasklog/tasklog.component.html
@@ -6,22 +6,22 @@
             </div>
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         Id :
                     </div>
                     <div class="col-md-3">
                         <input type="number" id="txtskill" class="form-control" Name="txtskill"
                             [(ngModel)]="tasklog.Id" placeholder="Id">
+                    </div> -->
+                    <div class="col-md-3">
+                        Task :
                     </div>
                     <div class="col-md-3">
-                        TaskId :
-                    </div>
-                    <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="tasklog.TaskId" placeholder="TaskId" />
+                        <select  id="DDLTaskId" name="DDLTaskId" class="form-control"  [(ngModel)]="tasklog.TaskId" >
+                            <option *ngFor="let item of taskData" value="{{item.Id}}" > {{item.Name}} </option>
+                        </select>
+                        <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="tasklog.TaskId" placeholder="TaskId" /> -->
                     </div>
 
                     <br><br>
