Tree Category changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -139,6 +139,7 @@
             <a [routerLink]="['reviews']" class="dashboard-nav-dropdown-item">Reviews</a>
             <a [routerLink]="['rolecategory']" class="dashboard-nav-dropdown-item">Role Category</a>
             <a [routerLink]="['roles']" class="dashboard-nav-dropdown-item">Roles</a>
+            <a [routerLink]="['companyRegistration']" class="dashboard-nav-dropdown-item">CompanyRegistration</a>
           </div>
         </div>
   
