--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -881,22 +881,16 @@
                             <button (click)="UpdateUserCompany()" class="btn btn-primary"
                                 *ngIf="isUpdate">Update</button>-->
 
-                                <div class="col-md-3"></div>
+                    <div class="col-md-3"></div>
                     <div class="col-md-2"></div>
                     <div class="col-md-2">
                         <button (click)="OnSaveUserDetail()" class="btn btn-primary" *ngIf="isSave && i==l-1"
                             style="margin-left:30px;">Submit</button>
                     </div>
                     <div class="col-md-5"></div>
-
-
-                    
-               
-
+                </div>
 
             </div>
-
-
         </div>
     </div>
 </div>
